docs/auditor/10.6/admin/reports/video.md
---
title: "Reports with Video"
description: "Reports with Video"
sidebar_position: 30
---

# Reports with Video

Netwrix Auditor can be configured to capture video of user activity on the monitored computers that
helps analyze and control changes made there. When you click a link, a video player opens and
playback of the recorded user activity starts, showing launched applications, actions, etc.

To view reports with video, navigate to Reports → User Activity.

In the report filters, select a monitoring plan you want to generate a report for. To review data
sources and items included in each plan, navigate to the Monitoring Plans section.

![ReportsWithVideo](/images/auditor/10.6/admin/reports/alluseractivityvideo.webp)

Each report has a set of filters which help organize audit data in the most convenient way. See the
[View Reports](/docs/auditor/10.6/admin/reports/view.md) topic for additional
information. You can also create a subscription to any report you want to receive on a regular
basis. See the [Subscriptions](/docs/auditor/10.6/admin/subscriptions/overview.md)
topic for additional information.

Follow the steps to play a video:

**Step 1 –** Navigate to **Reports** → **User Activity**. Select any report and click View.

**Step 2 –** Click a link in the **When** column.

To open User Activity report for the selected user or server, you can also click the link in the Who
and Where columns of the All Users Activity report.
